# fish-audio

./: .gitignore  FORCE_PUSH_INSTRUCTIONS.md  PYTORCH_SETUP.md  RTX_PYTORCH_COMPATIBILITY.md  SAFE_PYTORCH_TESTING.md  SAGEMAKER_SETUP.md  SAGEMAKER_TEST_GUIDE.md  TEST_CHECKLIST.md  backup_pytorch.py  inference.ipynb  install.ps1  install.sh  neymar_voice_app.py  neymar_zero_shot_inference.py  pyproject.toml  quick_test.py  requirements_locked.txt  restore_pytorch.py  sagemaker_studio_setup.ipynb  setup_pytorch.py  setup_sagemaker.sh  test_inference_speed.py  test_pytorch_setup.py  test_zero_shot.py  tts_cli.py  tts_simple.py  tts_subprocess.py  verify_pytorch_sagemaker.py
voice-service/: .dockerignore  .env.example  .gitignore  Dockerfile  GIT_LFS_CLEANUP.md  HUGGINGFACE_AUTH.md  INSTALL.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_REVIEW.md  PRODUCTION_REVIEW.md  README.md  README_INSTALL.md  RUN_GPU_TESTS.md  SAGEMAKER_DEPENDENCY_CONFLICTS.md  SAGEMAKER_FIX.md  TEST_STATUS.md  Untitled  docker-compose.yml  entrypoint.sh  env.example.txt  fix-pyrootutils-quick.sh  fix-pyrootutils.sh  fix-pytest-sagemaker.sh  fix-torchaudio-version.sh  install-sagemaker-fix.sh  install-sagemaker.sh  install.ps1  install.py  install.sh  pyproject.toml  pytest.ini  quick-fix-sagemaker.sh  requirements-dev.txt  requirements.txt  run-gpu-tests.sh  setup-huggingface-auth.sh  setup.sh  streamlit_app.py
voice-service/docs/: api.md  deployment.md  performance.md  quickstart.md
voice-service/notebooks/: finetune_fixed.ipynb  finetune_neymar_lora.ipynb  finetune_s1_mini.ipynb
(+146 files in other folders)
