[tool.poetry]
name = "voice-service"
version = "1.0.0"
description = "Production TTS service with OpenAI-compatible API"
authors = ["Naoris AI"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# PyTorch installed separately - use install.py for auto-detection
# Or manually: pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu121
# CUDA versions: cu118, cu121, cu124, cu128 (nightly)
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
soundfile = "^0.12.1"
numpy = "^1.26.0"
httpx = "^0.28.0"
huggingface-hub = "^0.27.0"
loguru = "^0.7.0"
aiofiles = "^24.1.0"
streamlit = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
ruff = "^0.8.0"

# PyTorch source removed - install separately for CUDA compatibility
# Use: python install.py (auto-detects CUDA)
# Or: pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu121

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: tests requiring GPU hardware",
    "asyncio: async tests",
]


